--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
 # CocoaPods - Don't commit Pods folder (use pod install to restore)
 Pods/
 
+# Backend/CoMa folder - Not part of iOS project
+schoolAttenance-CoMa/
+
 # Xcode
 *.xcuserstate
 xcuserdata/
